<resources>
    <string name="app_name" translatable="false">Bandyer SDK Showcase</string>
    <string name="app_name_with_version" translatable="false">Showcase %1$s</string>
    <string name="pref_api_key" translatable="false">apiKey</string>
    <string name="pref_title_api_key" translatable="false">API_KEY</string>
    <string name="pref_hint_api_key" translatable="false">ak_xxx</string>
    <string name="pref_app_id" translatable="false">appId</string>
    <string name="pref_title_app_id" translatable="false">APP_ID</string>
    <string name="pref_hint_app_id" translatable="false">mAppId_xxx</string>
    <string name="pref_watermark_id" translatable="false">watermarkId</string>
    <string name="pref_custom_user_details" translatable="false">customUserDetails</string>
    <string name="pref_project_number" translatable="false">projectNumber</string>
    <string name="pref_title_project_number" translatable="false">Firebase Project Number</string>
    <string name="pref_hint_project_number" translatable="false">1035469437089</string>
    <string name="summary_project_number" translatable="false">The project number is used to send notifications from our backend to this sample app.
        \n\nThis is not mandatory for the sdk to work, it\'s used by us to notify this sample app.</string>
    <string name="pref_environment" translatable="false">environment</string>
    <string name="pref_title_environment" translatable="false">ENVIRONMENT</string>
    <string name="pref_hint_environment" translatable="false">sandbox</string>
    <string name="summary_environment" translatable="false">The environment to use for the BandyerSDK.</string>
    <string name="summary_leak_canary" translatable="false">LeakCanary is useful to debug if any object is retained outside of context, which will lead to excessive usage of RAM.</string>
    <string name="summary_watermark" translatable="false">Watermark to setup on calls to brandify your application.\nThis is useful to ensure the final user that the caller is receiving a call from a known source.</string>
    <string name="summary_custom_user_details" translatable="false">Custom display name and image of users displayed in call.</string>
    <string name="leak_canary" translatable="false">LeakCanary</string>
    <string name="use_mock_user_details_provider" translatable="false">Mock user details</string>
    <string name="pref_mockUserDetails_title" translatable="false">Mock user details</string>
    <string name="pref_mockUserDetails" translatable="false">MOCK USER DETAILS</string>
    <string name="summary_use_mock_user_details_provider" translatable="false">Use this setting to customize user details when a chat or call UI is presented.</string>
    <string name="use_simplified_version_title" translatable="false">Simplified version</string>
    <string name="use_simplified_version_summary" translatable="false">Automatically executes call and chat opening requests based on default settings.</string>
    <string name="use_simplified_version" translatable="false">Use simplified version</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="button_allow" translatable="false">Allow</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_deny" translatable="false">Deny</string>
    <string name="show_camera" translatable="false">Show camera preview</string>
    <string name="permission_camera_rationale" translatable="false">Camera permission is needed to show the camera preview.</string>
    <string name="permission_camera_denied" translatable="false">Camera permission was denied. Please consider granting it in order to access the camera!</string>
    <string name="permission_camera_never_ask_again" translatable="false">Camera permission was denied with never ask again.</string>
    <string name="oto_call_error_no_selected_user" translatable="false">You must provide at least one valid user alias to start a call.</string>
    <string name="oto_chat_error_no_selected_user" translatable="false">You must provide at least one valid user alias to start a chat.</string>
    <string name="oto_chat_error_group_selected" translatable="false">Group chats are not yet supported.</string>
    <string name="login_title" translatable="false">Choose the user to login with:</string>
    <string name="hang_up" translatable="false">Hang up</string>
    <string name="calling_user" translatable="false">Calling user…</string>
    <string name="decline" translatable="false">Decline</string>
    <string name="answer" translatable="false">Answer</string>
    <string name="pick_users" translatable="false">Hello %1$s!\nWho do you want to call or chat with?</string>
    <plurals name="user_is_ringing">
        <item quantity="one">is ringing…</item>
        <item quantity="other">are ringing…</item>
    </plurals>
    <plurals name="user_is_calling_you">
        <item quantity="one">is calling you…</item>
        <item quantity="other">are calling you…</item>
    </plurals>
    <plurals name="error_over_count">
        <item quantity="one">error</item>
        <item quantity="other">error</item>
    </plurals>
    <string name="selected_users" translatable="false">Selected users:</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="logout_confirmation" translatable="false">Do you want to logout?</string>
    <string name="caller_name" translatable="false">Caller name</string>
    <string name="preparing_call" translatable="false">Call is loading…</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="dialog_error_title" translatable="false">Error</string>
    <string name="no_user_found" translatable="false">No user found.</string>
    <string name="search" translatable="false">Search&#8230;</string>
    <string name="action_settings" translatable="false">Configuration</string>
    <string name="edit_activity" translatable="false">Edit</string>
    <string name="summary_api_key" translatable="false">The api key is used to retrieve users for the company.
        \n\nThis key is not mandatory for the sdk to work, it\'s used only by sample app to retrieve the users without the need of a backend.
        \n\nWhen integrating you shall use this key only SERVER SIDE!</string>
    <string name="summary_app_id" translatable="false">The app id is mandatory for the sdk to work!.</string>
    <string name="pref_credentials_category" translatable="false">Credentials</string>
    <string name="pref_pushProvider" translatable="false">pushProvider</string>
    <string name="pref_title_pushProvider" translatable="false">PUSH PROVIDER</string>
    <string name="pref_hint_pushProvider" translatable="false">FCM</string>
    <string name="summary_pushProvider" translatable="false">The provider to use for push notifications.</string>
    <string name="clear_all" translatable="false">Clear all</string>
    <string name="reset_all" translatable="false">Reset all</string>
    <string name="save" translatable="false">Save</string>
    <string name="mock_user_authentication_failed" translatable="false">Biometric user authentication failed.</string>
    <string name="mock_user_authentication_dialog_title" translatable="false">User authentication request</string>
    <string name="mock_user_authentication_dialog_subtitle" translatable="false">Bandyer voip call authentication.</string>
    <string name="mock_user_authentication_dialog_description" translatable="false">Authentication requested by Bandyer voip call needed to verify your identity.</string>
    <string name="call_type" translatable="false">Call type</string>
    <string name="call_type_audio_only" translatable="false">AUDIO_ONLY</string>
    <string name="call_type_audio_upgradable" translatable="false">AUDIO_UPGRADABLE</string>
    <string name="call_type_audio_video" translatable="false">AUDIO_VIDEO</string>
    <string name="call_type_audio_only_name" translatable="false">Audio only</string>
    <string name="call_type_audio_upgradable_name" translatable="false">Audio upgradable</string>
    <string name="call_type_audio_video_name" translatable="false">Audio video</string>
    <string name="default_call_options" translatable="false">Default call settings</string>
    <string name="select_call_type" translatable="false">Select call type:</string>
    <string name="audio_only" translatable="false">Audio only</string>
    <string name="audio_upgradable" translatable="false">Audio upgradable</string>
    <string name="file_sharing" translatable="false">File sharing</string>
    <string name="audio_video" translatable="false">Audio video</string>
    <string name="call" translatable="false">Call</string>
    <string name="select_call_capabilities_from_chat_ui" translatable="false">Select call types that can be started from chat UI:</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="call_options_mock_user_authentication_request" translatable="false">Mock user biometric authentication request</string>
    <string name="call_options_mock_user_authentication_request_summary" translatable="false">The biometric mocked request will be triggered after 10s that the call has been established.</string>
    <string name="back_camera_as_default_if_available" translatable="false">Back camera as default (if available)</string>
    <string name="disable_proximity_sensor" translatable="false">Disable proximity sensor</string>
    <string name="screen_sharing_requires_api_21" translatable="false">Screen sharing (requires API 21)</string>
    <string name="chat_requires_api_19" translatable="false">Chat (requires API 19)</string>
    <string name="whiteboard_requires_api_19" translatable="false">Whiteboard (requires API 19)</string>
    <string name="call_recording" translatable="false">Call recording</string>
    <string name="select_in_call_capabilities" translatable="false">Select in-call capabilities:</string>
    <string name="select_in_call_options_audio" translatable="false">Select in-call options:</string>
    <string name="cancel_action" translatable="false">Cancel</string>
    <string name="select_all_call_capabilities" translatable="false">Select all call capabilities</string>
    <string name="deselect_all_call_capabilities" translatable="false">Deselect all call capabilities</string>
    <string name="select_all_call_options" translatable="false">Select all call options</string>
    <string name="deselect_all_call_options" translatable="false">Deselect all call options</string>
    <string name="no_users_selected" translatable="false">No users selected.</string>
    <string name="settings_have_been_changed_alert" translatable="false">Settings have been changed, restarting app&#8230;</string>
    <string name="ongoing_call_description" translatable="false">Tap to go back in call</string>
    <string name="pref_debug_options" translatable="false">Debug options</string>
    <string name="pref_extra_options" translatable="false">Extra options</string>
    <string name="pref_sdk_configuration" translatable="false">SDK configuration</string>
    <string name="pref_call_type_title" translatable="false">Default call type</string>
    <string name="pref_call_capabilities_title" translatable="false">In-call default capabilities</string>
    <string name="pref_call_options_title" translatable="false">In-call default options</string>
    <string name="pref_call_options_experimental" translatable="false">Experimental</string>
    <string name="mock_user_details_config_none" translatable="false">NONE</string>
    <string name="mock_user_details_config_random" translatable="false">RANDOM</string>
    <string name="mock_user_details_config_custom" translatable="false">CUSTOM</string>
</resources>