<?xml version='1.0' encoding='utf-8'?>
<androidx.preference.PreferenceScreen xmlns:ns0="http://schemas.android.com/apk/res/android" xmlns:ns1="http://schemas.android.com/apk/res-auto">

    <com.bandyer.demo_android_sdk.custom_views.SummaryListPreference ns1:iconSpaceReserved="false" ns0:entries="@array/Environments" ns0:entryValues="@array/Environments" ns0:icon="@null" ns0:key="@string/pref_environment" ns0:title="@string/pref_title_environment" />

    <com.bandyer.demo_android_sdk.custom_views.SummaryEditTextPreference ns1:iconSpaceReserved="false" ns0:defaultValue="@string/app_id" ns0:hint="@string/pref_hint_app_id" ns0:icon="@null" ns0:id="@+id/pref_app_id" ns0:key="@string/pref_app_id" ns0:selectAllOnFocus="true" ns0:singleLine="true" ns0:title="@string/pref_title_app_id" />

    <com.bandyer.demo_android_sdk.custom_views.SummaryEditTextPreference ns1:iconSpaceReserved="false" ns0:defaultValue="@string/api_key" ns0:hint="@string/pref_hint_api_key" ns0:icon="@null" ns0:id="@+id/pref_api_key" ns0:key="@string/pref_api_key" ns0:selectAllOnFocus="true" ns0:singleLine="true" ns0:title="@string/pref_title_api_key" />


    <com.bandyer.demo_android_sdk.custom_views.SummaryEditTextPreference ns1:iconSpaceReserved="false" ns0:defaultValue="@string/project_number" ns0:hint="@string/pref_hint_project_number" ns0:icon="@null" ns0:id="@+id/pref_notification_project_number" ns0:key="@string/pref_project_number" ns0:selectAllOnFocus="true" ns0:singleLine="true" ns0:title="@string/pref_title_project_number" />

</androidx.preference.PreferenceScreen>