<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Bandyer S.r.l. All Rights Reserved.
  ~ See LICENSE.txt for licensing information
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:elevation="@dimen/space8"
            android:layout_width="match_parent"
            android:id="@+id/card_view_capabilities"
            android:layout_marginStart="@dimen/space16"
            android:layout_marginEnd="@dimen/space16"
            android:layout_marginBottom="@dimen/space16"
            app:contentPadding="@dimen/space16"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/select_in_call_capabilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space16"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_whiteboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/whiteboard_requires_api_19" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_file_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_sharing" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_requires_api_19" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_screen_sharing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_sharing_requires_api_21" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:elevation="@dimen/space8"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/space16"
            android:layout_marginEnd="@dimen/space16"
            android:layout_marginBottom="@dimen/space16"
            android:id="@+id/card_view_options"
            app:contentPadding="@dimen/space16"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/select_in_call_options_audio"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space16"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_recording"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/call_recording" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_back_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back_camera_as_default_if_available" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/call_options_disable_proximity_sensor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space16"
                    android:text="@string/disable_proximity_sensor" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</merge>